<?xml version="1.0"?>
<package format="2">

  <name>mrs_icm_imu_driver</name>
  <version>1.0.0</version>
  <description>ICM-42688-P IMU driver</description>

  <maintainer email="hert@fly4future.com">Daniel Hert</maintainer>
  <author email="hert@fly4future.com">Daniel Hert</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>mrs_lib</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
